syntax = "proto3";

package storage;
option go_package = "github.com/ilyalavrinov/justforfun/interview/distributedstorage/internal/proto/storage";
import "google/protobuf/empty.proto";

message StoredUnit {
    string file_id = 1;
    int32 chunk_id = 2;
    bytes data = 3;
}

service Storage {
    rpc StoreData (StoredUnit) returns (google.protobuf.Empty) {};
}